--- a/scss/order.scss
+++ b/scss/order.scss
@@ -1,3 +1,4 @@
-h1{
-    background-color: aqua;
-}
+@import"./variable.scss";
+@import"./container/header.scss";
+@import"./container/main.scss";
+@import"./container/foooter.scss"
