--- a/scss/container/header.scss
+++ b/scss/container/header.scss
@@ -1,24 +1,24 @@
 .header__club{ 
-background-image: url(../../multimedia/background/background_Cuiano_social_club.jpg);
+background-image: url(../multimedia/background/background_Cuiano_social_club.jpg);
 }
 .header__Cuiano{
-    background-image: url(../../multimedia/background/background_Barbero_Cuiano.jpg);
+    background-image: url(../multimedia/background/background_Barbero_Cuiano.jpg);
 }
 .header__contacto{
 
 }
 .header__dibunker{
-    background-image: url(../../multimedia/background/background_Dibunker_Recordz.jpg);
+    background-image: url(../multimedia/background/background_Dibunker_Recordz.jpg);
 }
 .header__diseñando{
 
 }
 .header__tatton{
-    background-image: url(../../multimedia/background/background_Gaia.jpg);
+    background-image: url(../multimedia/background/background_Gaia.jpg);
 }
 .header__grayskull{
-    background-image: url(../../multimedia/background/background_Grayskull.jpg);
+    background-image: url(../multimedia/background/background_Grayskull.jpg);
 }
 .header__gaia{
-    background-image: url(../../multimedia/background/background_Gaia.jpg);
+    background-image: url(../multimedia/background/background_Gaia.jpg);
 }
