--- a/css/style.css
+++ b/css/style.css
@@ -2,25 +2,25 @@ h1 {
   text-align: center; }
 
 .header__club {
-  background-image: url(../../multimedia/background/background_Cuiano_social_club.jpg); }
+  background-image: url(../multimedia/background/background_Cuiano_social_club.jpg); }
 
 .header__Cuiano {
-  background-image: url(../../multimedia/background/background_Barbero_Cuiano.jpg); }
+  background-image: url(../multimedia/background/background_Barbero_Cuiano.jpg); }
 
 .header__dibunker {
-  background-image: url(../../multimedia/background/background_Dibunker_Recordz.jpg); }
+  background-image: url(../multimedia/background/background_Dibunker_Recordz.jpg); }
 
 .header__tatton {
-  background-image: url(../../multimedia/background/background_Gaia.jpg); }
+  background-image: url(../multimedia/background/background_Gaia.jpg); }
 
 .header__grayskull {
-  background-image: url(../../multimedia/background/background_Grayskull.jpg); }
+  background-image: url(../multimedia/background/background_Grayskull.jpg); }
 
 .header__gaia {
-  background-image: url(../../multimedia/background/background_Gaia.jpg); }
+  background-image: url(../multimedia/background/background_Gaia.jpg); }
 
 main {
   background-image: url(../../multimedia/background/pag_en_construccion.jpg); }
 
 footer {
-  background-color: green; }
+  background-color: wheat; }
