--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ h1 {
   background-image: url(../multimedia/background/background_Gaia.jpg); }
 
 main {
-  background-image: url(../multimedia/background/pag_en_construccion.jpg); }
+  background-image: url(../../multimedia/background/pag_en_construccion.jpg); }
 
 footer {
   background-color: wheat; }
