--- a/scss/order.scss
+++ b/scss/order.scss
@@ -1,4 +1,4 @@
 @import"./variable.scss";
 @import"./container/header.scss";
 @import"./container/main.scss";
-@import"./container/foooter.scss"
+@import"./container/foooter.scss";
