--- a/scss/order.scss
+++ b/scss/order.scss
@@ -1,4 +1,4 @@
-@import"./variable.scss";
-@import"./container/header.scss";
-@import"./container/index.scss";
-@import"./container/foooter.scss";
+@import "./_variable.scss";
+@import "./container/_header.scss";
+@import "./container/_main.scss";
+@import "./container/_foooter.scss";
