--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
+* {
+  margin: 0;
+  padding: 0; }
+
 .contenedor__iconos a i {
   color: white;
   margin: .3rem .3rem; }
 
-* {
-  margin: 0;
-  padding: 0; }
+h1 {
+  font-size: 2.5rem;
+  font-family: 'Merriweather', serif; }
+
+p {
+  font-size: 1.5rem;
+  font-family: 'Merriweather', serif; }
 
 body {
   font-size: 10px; }
@@ -61,9 +69,3 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center; }
-  .contenedor .contenedor_marca h1 {
-    font-size: 2.5rem;
-    font-family: 'Merriweather', serif; }
-  .contenedor .contenedor_marca p {
-    font-size: 1.5rem;
-    font-family: 'Merriweather', serif; }
