--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .contenedor__iconos{
     a {
         i{
@@ -5,4 +10,12 @@
             margin: .3rem .3rem;
         }
     }
+}
+h1{
+    font-size: 2.5rem;
+    font-family: 'Merriweather', serif;
+}
+p{
+    font-size: 1.5rem;
+    font-family: 'Merriweather', serif;
 }
