--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -19,3 +19,19 @@ p{
     font-size: 1.5rem;
     font-family: 'Merriweather', serif;
 }
+$colores:(
+
+header:#444241,
+main:linear-gradient(#ffffff, #c9c9c9dc),
+footer:#dfdfdf,
+facebook:#3b5998,
+instagram:#231F20 ,
+youtube:#c4302b,
+spotify:#1DB954,
+);
+
+%hovers___Footer{
+    transition:1s ;
+    transform: scale(2,2);
+    z-index: 100; 
+}
