--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,6 +1,12 @@
 *{
     margin: 0;
     padding: 0;
+    
+}
+ul, li{
+    margin: 0;
+    padding:0;
+    list-style: none;
 }
 
 .contenedor__iconos{
