--- a/scss/container/_main.scss
+++ b/scss/container/_main.scss
@@ -17,3 +17,61 @@
         
     }
 }
+
+.container__carrosel{
+    margin: auto;
+    background-color: white;
+    padding: 2rem;
+    width: 500px;
+    
+
+}
+ ul.slider{
+     position:  relative;
+     width: 500px;
+     height: 300px;
+ }
+ ul.slider li{
+     position:absolute;
+     left:0;
+     top:0;
+     opacity: 0;
+     width:inherit;
+     height: inherit;
+     background-color: white;
+     transition: opacity .5s;
+ }
+ ul.slider li img{
+     width: 100%;
+     height: 300px;
+     object-fit: cover;
+
+ }
+ ul.slider li:first-child{
+     opacity: 1;
+ }
+ul.slider li:target{
+    opacity: 1;
+}
+
+ .menu{
+     text-align: center;
+     margin: 20px;
+ }
+ .menu li{
+     display: inline-block;
+     text-align: center;
+ }
+ .menu li a{
+     display: inline-block;
+     color: white;
+     text-decoration: none;
+     background-color: grey;
+     padding: 10px;
+     width: 20px;
+     height: 20px;
+     font-size: 20px;
+     border-radius: 100%;
+ }
+
+ 
